home and faculty page very close to completed, about and classes pages still need styled.

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid" role="presentation">
             <div class="navbar-header">
-              <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
+              <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="" alt="PYT Dance Logo"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="./about.html">About</a></li>
@@ -29,11 +29,81 @@
 
     <div id="about-banner" class="jumbotron jumbotron-fluid" role="presentation">
       <div class="container-fluid" role="presentation">
-        <h1>Move Your Body &amp; Your Soul</h1>
-        <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+        <div class="row">
+          <div id="about-banner-img" class="col-lg-6">
+            <img src="./resources/images/workout-photo.png" alt="">
+          </div>
+
+        <div class="col-xs-12 col-lg-6">
+          <div class="about-content">
+            <h1>About PYT Dance</h1>
+            <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+          </div>
+        </div>
+        </div>
       </div>
     </div>
 
+  <div class="about-features">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <img src="./resources/images/icn-ballet.png" alt="">
+        </div>
+        <div class="col-xs-12 col-md-8 about-content">
+          <h1>Many Styles Of Dance</h1>
+          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-4 pull-right">
+          <img src="./resources/images/icn-clock.png" alt="">
+        </div>
+        <div class="col-xs-12 col-md-8 about-content">
+          <h1>Many Styles Of Dance</h1>
+          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <img src="./resources/images/icn-heart.png" alt="">
+        </div>
+        <div class="col-xs-12 col-md-8 about-content">
+          <h1>Many Styles Of Dance</h1>
+          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-4 pull-right">
+          <img src="./resources/images/icn-chrysler.png" alt="">
+        </div>
+        <div class="col-xs-12 col-md-8 about-content">
+          <h1>Many Styles Of Dance</h1>
+          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div id="map" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
+      <div class="container-fluid container-right" role="presentation">
+        <div class=" col-xs-9 col-md-4 blueish-purple-container">
+          <h2>Just beside the Brooklyn Bridge.</h2>
+          <p><strong>PYT Dance Studio</strong></p>
+          <p>14 Bridge Street <br>
+            New York, NY 10101 <br>
+            212.867.5309 <br>
+            contact@pytdance.com
+          </p>
+        </div>
+      </div>
+    </div>
     <footer class="container-fluid">
       <div class="row">
         <nav class="footer-nav">
