--- a/classes.html
+++ b/classes.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid" role="presentation">
             <div class="navbar-header">
-              <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
+              <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="" alt="PYT Dance Logo"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="./about.html">About</a></li>
@@ -29,11 +29,145 @@
 
     <div id="classes-banner" class="jumbotron jumbotron-fluid" role="presentation">
       <div class="container-fluid" role="presentation">
-        <h1>Move Your Body &amp; Your Soul</h1>
-        <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+        <div class="row">
+          <div id="classes-banner-img" class="col-lg-6">
+            <img src="./resources/images/classes-photo.png" alt="">
+          </div>
+
+          <div class="col-xs-12 col-lg-6">
+            <div class="classes-content">
+              <h1>Classes</h1>
+              <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
+    <div class="container course-list">
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="course">
+            <h1>Jazzercise</h1>
+            <p>Mondays, Thursdays</p>
+            <p>12pm-12:45pm</p>
+            <p>Saturdays</p>
+            <p>11pm-11:45pm</p>
+            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="container-fluid">
       <div class="row">
         <nav class="footer-nav">
