--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid" role="presentation">
             <div class="navbar-header">
-              <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
+              <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="" alt="PYT Dance Logo"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="./about.html">About</a></li>
@@ -27,36 +27,39 @@
         </nav>
     </header>
     <div id="home-banner" class="jumbotron jumbotron-fluid" role="presentation">
-      <div class="container-fluid" role="presentation">
+      <div class="jumbo-content container-fluid" role="presentation">
         <h1>Move Your Body &amp; Your Soul</h1>
-        <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+        <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
         <a href="#" class="btn btn-primary" role="button">Buy a Course Card</a>
       </div>
     </div>
 
     <div id="booty" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
       <div class="container-fluid container-right" role="presentation">
-        <div class="col-xs-12 col-md-4 col-md-offset-8 blue-container">
+        <div class="col-xs-12 col-md-4 blueish-purple-container">
           <h2>Move Your Body &amp; Your Soul</h2>
-          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
+          <a href="#">Read more on the blog</a>
         </div>
       </div>
     </div>
 
     <div id="fire" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
       <div class="container-fluid container-right" role="presentation">
-        <div class="col-xs-12 col-md-4 col-md-offset-8 purple-container">
+        <div class="col-xs-12 col-md-4 purple-container">
           <h2>Move Your Body &amp; Your Soul</h2>
-          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
+          <a href="#">Read more on the blog</a>
         </div>
       </div>
     </div>
 
     <div id="jump" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
       <div class="container-fluid container-right" role="presentation">
-        <div class="col-xs-12 col-md-4 col-md-offset-8 blue-container">
-          <h2>Move Your Body &amp; Your Soul</h2>
-          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+        <div class="col-xs-12 col-md-4 blueish-purple-container">
+            <h2>Move Your Body &amp; Your Soul</h2>
+            <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
+            <a href="#">Read more on the blog</a>
         </div>
       </div>
     </div>
