--- a/faculty.html
+++ b/faculty.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid" role="presentation">
             <div class="navbar-header">
-              <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
+              <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="" alt="PYT Dance Logo"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="./about.html">About</a></li>
@@ -27,12 +27,87 @@
         </nav>
     </header>
     <div id="faculty-banner" class="jumbotron jumbotron-fluid" role="presentation">
-      <div class="container-fluid" role="presentation">
-        <h1>Move Your Body &amp; Your Soul</h1>
-        <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+      <div class="jumbo-content container-fluid" role="presentation">
+        <h1>Faculty</h1>
+        <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
       </div>
     </div>
-
+    <div class="container trainers">
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="trainer-card">
+            <img src="./resources/images/faculty/johnny.png" alt="">
+            <h2>Johnny Thunder</h2>
+            <p><strong>Co-founder</strong></p>
+            <p>Tap, Jazz, Jazz-Hands, Jazz-Tap, Tap-Tap, Belly.</p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="trainer-card">
+            <img src="./resources/images/faculty/ella.png" alt="">
+            <h2>Ella McDonald</h2>
+            <p><strong>Co-Founder</strong></p>
+            <p>Fact and Truth</p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="trainer-card">
+            <img src="./resources/images/faculty/ann.png" alt="">
+            <h2>Ann Wade</h2>
+            <p><strong>Instructor</strong></p>
+            <p>The Idea of Watching TV</p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="trainer-card">
+            <img src="./resources/images/faculty/gary.png" alt="">
+            <h2>Gary Rivera</h2>
+            <p><strong>Instructor</strong></p>
+            <p>Vampires The Romantic Ideology Behind Them</p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="trainer-card">
+            <img src="./resources/images/faculty/helena.png" alt="">
+            <h2>Helena Rodriguez</h2>
+            <p><strong>Instructor</strong></p>
+            <p>When the Morning Dawns</p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="trainer-card">
+            <img src="./resources/images/faculty/noah.png" alt="">
+            <h2>Noah Craig</h2>
+            <p><strong>Instructor</strong></p>
+            <p>The Basics Of Western Astrology Explained</p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="trainer-card">
+            <img src="./resources/images/faculty/luella.png" alt="">
+            <h2>Luella Pierce</h2>
+            <p><strong>Instructor</strong></p>
+            <p>Alternative Facts</p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="trainer-card">
+            <img src="./resources/images/faculty/eva.png" alt="">
+            <h2>Eva Shelton</h2>
+            <p><strong>Instructor</strong></p>
+            <p>A Brief History Of Life</p>
+          </div>
+        </div>
+        <div class="col-md-12 col-lg-4" >
+          <div class="trainer-card">
+            <img src="./resources/images/faculty/aaron.png" alt="">
+            <h2>Aaron Parks</h2>
+            <p><strong>Instructor</strong></p>
+            <p>Words To Live By</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer class="container-fluid">
       <div class="row">
