pretty much done with all pages

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
               <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="" alt="PYT Dance Logo"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="./about.html">About</a></li>
+              <li><a class="active" href="./about.html">About</a></li>
               <li><a href="./classes.html">Classes</a></li>
               <li><a href="./faculty.html">Faculty</a></li>
             </ul>
@@ -29,7 +29,7 @@
 
     <div id="about-banner" class="jumbotron jumbotron-fluid" role="presentation">
       <div class="container-fluid" role="presentation">
-        <div class="row">
+        <div class="row center">
           <div id="about-banner-img" class="col-lg-6">
             <img src="./resources/images/workout-photo.png" alt="">
           </div>
@@ -45,8 +45,8 @@
     </div>
 
   <div class="about-features">
-    <div class="container">
-      <div class="row">
+    <div class="container feature">
+      <div class="row horizontal-center">
         <div class="col-xs-12 col-md-4">
           <img src="./resources/images/icn-ballet.png" alt="">
         </div>
@@ -56,8 +56,8 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
+    <div class="container feature">
+      <div class="row horizontal-center">
         <div class="col-xs-12 col-md-4 pull-right">
           <img src="./resources/images/icn-clock.png" alt="">
         </div>
@@ -67,8 +67,8 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
+    <div class="container feature">
+      <div class="row horizontal-center">
         <div class="col-xs-12 col-md-4">
           <img src="./resources/images/icn-heart.png" alt="">
         </div>
@@ -78,8 +78,8 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
+    <div class="container feature">
+      <div class="row horizontal-center">
         <div class="col-xs-12 col-md-4 pull-right">
           <img src="./resources/images/icn-chrysler.png" alt="">
         </div>
