--- a/classes.html
+++ b/classes.html
@@ -20,7 +20,7 @@
             </div>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="./about.html">About</a></li>
-              <li><a href="./classes.html">Classes</a></li>
+              <li><a class="active" href="./classes.html">Classes</a></li>
               <li><a href="./faculty.html">Faculty</a></li>
             </ul>
           </div>
@@ -29,7 +29,7 @@
 
     <div id="classes-banner" class="jumbotron jumbotron-fluid" role="presentation">
       <div class="container-fluid" role="presentation">
-        <div class="row">
+        <div class="row center">
           <div id="classes-banner-img" class="col-lg-6">
             <img src="./resources/images/classes-photo.png" alt="">
           </div>
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <div class="container course-list">
+    <div class="container-fluid course-list">
       <div class="row">
         <div class="col-xs-12 col-md-6 col-lg-4">
           <div class="course">
