--- a/faculty.html
+++ b/faculty.html
@@ -21,7 +21,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a href="./about.html">About</a></li>
               <li><a href="./classes.html">Classes</a></li>
-              <li><a href="./faculty.html">Faculty</a></li>
+              <li><a class="active" href="./faculty.html">Faculty</a></li>
             </ul>
           </div>
         </nav>
