added favicon, added media query to handle mobile logo

--- a/classes.html
+++ b/classes.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./resources/css/bootstrap.min.css">
     <link rel="stylesheet" href="./resources/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700" rel="stylesheet">
+    <link rel="icon" href="./resources/images/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="./resources/css/base.css">
     <link rel="stylesheet" href="./resources/css/classes.css">
   </head>
@@ -16,7 +17,8 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid" role="presentation">
             <div class="navbar-header">
-              <a href="./index.html" class="navbar-brand"><img id="pyt-logo" src="" alt="PYT Dance Logo"></a>
+              <a href="./index.html" class="navbar-brand"><img id="pyt-logo-desktop" src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
+              <a href="./index.html" class="navbar-brand"><img id="pyt-logo-mobile" src="./resources/images/logo-mobile.png" alt="PYT Dance Logo"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="./about.html">About</a></li>
@@ -192,6 +194,6 @@
     </footer>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./resources/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./resources/js/base.js"></script>
+    <script type="text/javascript" src="./resources/js/social.js"></script>
   </body>
 </html>
